Fix layout shifting

--- a/src/components/MovieCard/MovieCard.module.scss
+++ b/src/components/MovieCard/MovieCard.module.scss
@@ -17,7 +17,16 @@
 }
 
 .Poster {
-  max-width: 100%;
+  width: 100%;
+  background-color: #444;
+  object-fit: cover;
+  height: 150px;
+  @media (min-width: 400px) {
+    height: 300px;
+  }
+  @media (min-width: 1100px) {
+    height: 400px;
+  }
 }
 
 .Description {
